// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSchedule should render ltr radio schedules correctly 1`] = `
.c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.725rem;
  height: 0.725rem;
}

.c21 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c15 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c14 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.c17 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c26 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c13 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c13:hover,
.c13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:visited {
  color: #6E6E73;
}

.c13:hover .c16,
.c13:focus .c16 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0.0625rem solid transparent;
  height: 100%;
}

.c11 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

.c24 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #6E6E73;
  margin: 0;
}

.c25 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #11708C;
  display: inline-block;
  margin-right: 0.5rem;
}

.c18 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

.c19 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.c23 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  color: #FFFFFF;
}

.c27 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  color: #11708C;
}

.c20 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.c28 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.c22 {
  padding-left: 0.5rem;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.25rem;
}

.c6 > svg {
  color: #5A5A5A;
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c8 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c8::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-left: 0.625rem;
  width: 100%;
}

.c4 {
  padding-bottom: 0.5rem;
}

.c1 {
  padding: 0;
  margin: 0;
}

.c3 {
  position: relative;
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c18 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c19 {
    background-color: transparent;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c23 {
    background-color: transparent;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c27 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c27 {
    background-color: transparent;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c8 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<ul
  class="c0 c1"
  dir="ltr"
  role="list"
>
  <li
    class="c2 c3"
    data-e2e="live"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="ltr"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            14:54
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/news/articles/cn7k01xp8kxo"
          >
            <span
              role="text"
            >
              <span
                aria-hidden="true"
                class="c14"
                dir="ltr"
              >
                LIVE 
              </span>
              <span
                class="c15"
                lang="en-GB"
              >
                Live, 
              </span>
            </span>
            Could a computer ever create better art than a human?
            <span
              class="c15"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          The critic, author, poet and TV host was known for his witty commentary on international television.
        </p>
      </div>
      <div
        class="c19"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="ltr"
        >
          <span
            class="c15"
          >
             Duration 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="onDemand"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="ltr"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            14:54
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
            <span
              class="c15"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          The critic, author, poet and TV host was known for his witty commentary on international television.
        </p>
      </div>
      <div
        class="c23"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="ltr"
        >
          <span
            class="c15"
          >
             Duration 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="onDemand"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="ltr"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            14:54
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
            <span
              class="c15"
            >
              , 
              14:54
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          The critic, author, poet and TV host was known for his witty commentary on international television.
        </p>
      </div>
      <div
        class="c23"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="ltr"
        >
          <span
            class="c15"
          >
             Duration 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="next"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="ltr"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            14:54
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c24"
        >
          <span
            class="c25"
            dir="ltr"
          >
            NEXT 
          </span>
          Could a computer ever create better art than a human?
          <span
            class="c15"
          >
            , 
            14:54
            , 
          </span>
          <span
            class="c16 c26"
          >
            29/01/1990
          </span>
        </h3>
        <p
          class="c18"
        >
          The critic, author, poet and TV host was known for his witty commentary on international television.
        </p>
      </div>
      <div
        class="c27"
      >
        <span
          class="c28"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="ltr"
        >
          <span
            class="c15"
          >
             Duration 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
</ul>
`;

exports[`RadioSchedule should render rtl radio schedules correctly 1`] = `
.c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.725rem;
  height: 0.725rem;
}

.c21 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c15 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c14 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-left: 0.5rem;
}

.c17 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

.c26 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

.c13 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c13:hover,
.c13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:visited {
  color: #6E6E73;
}

.c13:hover .c16,
.c13:focus .c16 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0.0625rem solid transparent;
  height: 100%;
}

.c11 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #222222;
  margin: 0;
}

.c24 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #6E6E73;
  margin: 0;
}

.c25 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #11708C;
  display: inline-block;
  margin-left: 0.5rem;
}

.c18 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.25rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

.c19 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.c23 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  color: #FFFFFF;
}

.c27 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  color: #11708C;
}

.c20 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.c28 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

.c22 {
  padding-right: 0.5rem;
}

.c9 {
  font-size: 1rem;
  line-height: 1.25rem;
  color: #6E6E73;
  display: block;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.25rem;
}

.c6 > svg {
  color: #5A5A5A;
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c8 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c8::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-right: 0.625rem;
  width: 100%;
}

.c4 {
  padding-bottom: 0.5rem;
}

.c1 {
  padding: 0;
  margin: 0;
}

.c3 {
  position: relative;
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c26 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c26 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c24 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c25 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c18 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c19 {
    background-color: transparent;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c23 {
    background-color: transparent;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c27 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c27 {
    background-color: transparent;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c8 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<ul
  class="c0 c1"
  dir="rtl"
  role="list"
>
  <li
    class="c2 c3"
    data-e2e="live"
    dir="rtl"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="rtl"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="rtl"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            ۱۴:۵۴
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/arabic/articles/c1er5mjnznzo"
          >
            <span
              role="text"
            >
              <span
                class="c14"
                dir="rtl"
              >
                مباشر 
              </span>
            </span>
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="c15"
            >
              , 
              ۱۴:۵۴
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
        </p>
      </div>
      <div
        class="c19"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="rtl"
        >
          <span
            class="c15"
          >
             المدة الزمنية 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="onDemand"
    dir="rtl"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="rtl"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="rtl"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            ۱۴:۵۴
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="c15"
            >
              , 
              ۱۴:۵۴
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
        </p>
      </div>
      <div
        class="c23"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="rtl"
        >
          <span
            class="c15"
          >
             المدة الزمنية 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="onDemand"
    dir="rtl"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="rtl"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="rtl"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            ۱۴:۵۴
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c12"
        >
          <a
            class="c13"
            href="/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
            <span
              class="c15"
            >
              , 
              ۱۴:۵۴
              , 
            </span>
            <span
              class="c16 c17"
            >
              29/01/1990
            </span>
          </a>
        </h3>
        <p
          class="c18"
        >
          هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
        </p>
      </div>
      <div
        class="c23"
      >
        <span
          class="c20"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="rtl"
        >
          <span
            class="c15"
          >
             المدة الزمنية 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
  <li
    class="c2 c3"
    data-e2e="next"
    dir="rtl"
    role="listitem"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          dir="rtl"
        >
          <svg
            aria-hidden="true"
            class="c7"
            focusable="false"
            height="13"
            viewBox="0 0 13 13"
            width="13"
          >
            <path
              d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
            />
            <path
              d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
            />
          </svg>
        </span>
        <span
          aria-hidden="true"
          class="c8"
          dir="rtl"
        >
          <time
            class="c9"
            datetime="2019-08-27"
          >
            ۱۴:۵۴
          </time>
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <h3
          class="c24"
        >
          <span
            class="c25"
            dir="rtl"
          >
            مباشر 
          </span>
          لماذا يخجل البعض من اسم قريته في مصر؟
          <span
            class="c15"
          >
            , 
            ۱۴:۵۴
            , 
          </span>
          <span
            class="c16 c26"
          >
            29/01/1990
          </span>
        </h3>
        <p
          class="c18"
        >
          هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
        </p>
      </div>
      <div
        class="c27"
      >
        <span
          class="c28"
        >
          <svg
            aria-hidden="true"
            class="c21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        <time
          class="c22"
          datetime="PT1H"
          dir="rtl"
        >
          <span
            class="c15"
          >
             المدة الزمنية 1,00,00 
          </span>
          <span
            aria-hidden="true"
            class=""
          >
            1:00:00
          </span>
        </time>
      </div>
    </div>
  </li>
</ul>
`;
